--- a/tutorials/01-basic/pytorch_basic/PyTorch Basic.ipynb
+++ b/tutorials/01-basic/pytorch_basic/PyTorch Basic.ipynb
@@ -1236,7 +1236,7 @@
    "id": "784fc433",
    "metadata": {},
    "source": [
-    "### Thank for reading & good bye!"
+    "### Thanks for reading & good bye!"
    ]
   }
  ],
